--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xenon",
-  "version": "1.3.0",
+  "version": "0.3.0",
   "private": true,
   "license": "MIT",
   "author": "lumen-limitless",
@@ -22,9 +22,9 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "1.4.1",
-    "@ducanh2912/next-pwa": "^10.2.7",
+    "@ducanh2912/next-pwa": "^10.2.8",
     "@hookform/resolvers": "^3.9.0",
-    "@next/third-parties": "^14.2.4",
+    "@next/third-parties": "^14.2.5",
     "@portabletext/react": "^3.1.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -54,28 +54,32 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@sanity-typed/client": "^3.1.5",
+    "@sanity-typed/next-sanity": "^2.1.5",
+    "@sanity-typed/types": "^6.3.6",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.49.0",
+    "@sanity/vision": "^3.52.0",
     "@stripe/stripe-js": "^4.1.0",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/typography": "^0.5.13",
-    "@tanstack/react-query": "^5.50.1",
-    "@tanstack/react-table": "^8.19.2",
+    "@tanstack/react-query": "^5.51.11",
+    "@tanstack/react-table": "^8.19.3",
     "@vercel/analytics": "^1.3.1",
     "@vercel/postgres": "^0.9.0",
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
-    "cloudinary": "^2.2.0",
+    "cloudinary": "^2.3.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.32.0",
-    "embla-carousel-react": "8.1.6",
-    "framer-motion": "^11.2.14",
+    "embla-carousel-react": "8.1.7",
+    "framer-motion": "^11.3.8",
+    "groq-builder": "^0.9.1",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.407.0",
-    "next": "^14.2.4",
+    "lucide-react": "^0.414.0",
+    "next": "^14.2.5",
     "next-auth": "5.0.0-beta.19",
     "next-cloudinary": "^6.6.2",
     "next-sanity": "^9.4.2",
@@ -83,34 +87,35 @@
     "pg": "^8.12.0",
     "postcss": "^8.4.39",
     "react": "^18.3.1",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.0.2",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.1",
-    "react-resizable-panels": "^2.0.20",
-    "react-use": "^17.5.0",
-    "sanity": "^3.49.0",
+    "react-resizable-panels": "^2.0.22",
+    "react-use": "^17.5.1",
+    "resend": "^3.4.0",
+    "sanity": "^3.52.0",
     "sharp": "^0.33.4",
     "sonner": "^1.5.0",
     "stripe": "^16.2.0",
-    "styled-components": "^6.1.11",
+    "styled-components": "^6.1.12",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^3.4.6",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^14.2.4",
-    "@next/env": "^14.2.4",
-    "@playwright/test": "^1.45.1",
+    "@next/bundle-analyzer": "^14.2.5",
+    "@next/env": "^14.2.5",
+    "@playwright/test": "^1.45.2",
     "@redux-devtools/extension": "^3.3.0",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.12",
-    "@types/lodash": "^4.17.6",
-    "@types/node": "^20.14.10",
+    "@types/lodash": "^4.17.7",
+    "@types/node": "^20.14.11",
     "@types/pg": "^8.11.6",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
@@ -120,14 +125,14 @@
     "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.3.2",
+    "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.0.0",
-    "prettier-plugin-packagejson": "^2.5.0",
+    "prettier-plugin-packagejson": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "ts-node": "^10.9.2",
     "tsx": "^4.16.2",
     "typescript": "5.5.3",
-    "webpack": "^5.92.1"
+    "webpack": "^5.93.0"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} --transpile-only prisma/seed.ts"
