--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@auth/drizzle-adapter": "1.4.1",
+    "@auth/drizzle-adapter": "1.4.2",
     "@ducanh2912/next-pwa": "^10.2.8",
     "@hookform/resolvers": "^3.9.0",
     "@next/third-parties": "^14.2.5",
@@ -58,49 +58,50 @@
     "@sanity-typed/next-sanity": "^2.1.5",
     "@sanity-typed/types": "^6.3.6",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.52.0",
+    "@sanity/vision": "^3.53.0",
     "@stripe/stripe-js": "^4.1.0",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/typography": "^0.5.13",
-    "@tanstack/react-query": "^5.51.11",
-    "@tanstack/react-table": "^8.19.3",
+    "@tanstack/react-query": "^5.51.21",
+    "@tanstack/react-table": "^8.20.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/postgres": "^0.9.0",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
-    "cloudinary": "^2.3.0",
+    "cloudinary": "^2.4.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.32.0",
-    "embla-carousel-react": "8.1.7",
-    "framer-motion": "^11.3.8",
+    "drizzle-orm": "^0.32.2",
+    "embla-carousel-react": "8.1.8",
+    "framer-motion": "^11.3.21",
     "groq-builder": "^0.9.1",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.414.0",
+    "lucide-react": "^0.424.0",
     "next": "^14.2.5",
     "next-auth": "5.0.0-beta.19",
-    "next-cloudinary": "^6.6.2",
-    "next-sanity": "^9.4.2",
+    "next-cloudinary": "^6.9.0",
+    "next-sanity": "^9.4.3",
     "next-themes": "^0.3.0",
     "pg": "^8.12.0",
-    "postcss": "^8.4.39",
+    "postcss": "^8.4.41",
     "react": "^18.3.1",
-    "react-day-picker": "^9.0.2",
+    "react-day-picker": "^9.0.7",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.52.1",
+    "react-hook-form": "^7.52.2",
+    "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.0.22",
     "react-use": "^17.5.1",
-    "resend": "^3.4.0",
-    "sanity": "^3.52.0",
+    "resend": "^3.5.0",
+    "sanity": "^3.53.0",
     "sharp": "^0.33.4",
     "sonner": "^1.5.0",
-    "stripe": "^16.2.0",
+    "stripe": "^16.6.0",
     "styled-components": "^6.1.12",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss": "^3.4.6",
+    "tailwindcss": "^3.4.7",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
     "zod": "^3.23.8",
@@ -109,18 +110,18 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^14.2.5",
     "@next/env": "^14.2.5",
-    "@playwright/test": "^1.45.2",
+    "@playwright/test": "^1.46.0",
     "@redux-devtools/extension": "^3.3.0",
-    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.7",
-    "@types/node": "^20.14.11",
+    "@types/node": "^22.1.0",
     "@types/pg": "^8.11.6",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "drizzle-kit": "^0.23.0",
-    "eslint": "9.7.0",
+    "drizzle-kit": "^0.23.2",
+    "eslint": "9.8.0",
     "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
@@ -130,8 +131,8 @@
     "prettier-plugin-packagejson": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "ts-node": "^10.9.2",
-    "tsx": "^4.16.2",
-    "typescript": "5.5.3",
+    "tsx": "^4.16.5",
+    "typescript": "5.5.4",
     "webpack": "^5.93.0"
   },
   "prisma": {
