--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@auth/drizzle-adapter": "1.4.2",
-    "@ducanh2912/next-pwa": "^10.2.8",
+    "@auth/drizzle-adapter": "1.5.0",
+    "@ducanh2912/next-pwa": "^10.2.9",
     "@hookform/resolvers": "^3.9.0",
-    "@next/third-parties": "^14.2.5",
+    "@next/third-parties": "^14.2.13",
     "@portabletext/react": "^3.1.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -58,82 +58,82 @@
     "@sanity-typed/next-sanity": "^2.1.5",
     "@sanity-typed/types": "^6.3.6",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.53.0",
-    "@stripe/stripe-js": "^4.1.0",
+    "@sanity/vision": "^3.57.4",
+    "@stripe/stripe-js": "^4.5.0",
     "@svgr/webpack": "^8.1.0",
-    "@tailwindcss/typography": "^0.5.13",
-    "@tanstack/react-query": "^5.51.21",
-    "@tanstack/react-table": "^8.20.1",
+    "@tailwindcss/typography": "^0.5.15",
+    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-table": "^8.20.5",
     "@vercel/analytics": "^1.3.1",
-    "@vercel/postgres": "^0.9.0",
+    "@vercel/postgres": "^0.10.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
-    "cloudinary": "^2.4.0",
+    "cloudinary": "^2.5.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "date-fns": "^3.6.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.32.2",
-    "embla-carousel-react": "8.1.8",
-    "framer-motion": "^11.3.21",
+    "drizzle-orm": "^0.33.0",
+    "embla-carousel-react": "8.3.0",
+    "framer-motion": "^11.5.6",
     "groq-builder": "^0.9.1",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.424.0",
-    "next": "^14.2.5",
+    "lucide-react": "^0.445.0",
+    "next": "^14.2.13",
     "next-auth": "5.0.0-beta.19",
-    "next-cloudinary": "^6.9.0",
-    "next-sanity": "^9.4.3",
+    "next-cloudinary": "^6.13.0",
+    "next-sanity": "^9.5.0",
     "next-themes": "^0.3.0",
-    "pg": "^8.12.0",
-    "postcss": "^8.4.41",
+    "pg": "^8.13.0",
+    "postcss": "^8.4.47",
     "react": "^18.3.1",
-    "react-day-picker": "^9.0.7",
+    "react-day-picker": "^9.1.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.52.2",
+    "react-hook-form": "^7.53.0",
     "react-markdown": "^9.0.1",
-    "react-resizable-panels": "^2.0.22",
+    "react-resizable-panels": "^2.1.3",
     "react-use": "^17.5.1",
-    "resend": "^3.5.0",
-    "sanity": "^3.53.0",
-    "sharp": "^0.33.4",
+    "resend": "^4.0.0",
+    "sanity": "^3.57.4",
+    "sharp": "^0.33.5",
     "sonner": "^1.5.0",
-    "stripe": "^16.6.0",
-    "styled-components": "^6.1.12",
-    "tailwind-merge": "^2.4.0",
-    "tailwindcss": "^3.4.7",
+    "stripe": "^16.12.0",
+    "styled-components": "^6.1.13",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss": "^3.4.12",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.1",
+    "vaul": "^0.9.4",
     "zod": "^3.23.8",
-    "zustand": "^4.5.4"
+    "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^14.2.5",
-    "@next/env": "^14.2.5",
-    "@playwright/test": "^1.46.0",
+    "@next/bundle-analyzer": "^14.2.13",
+    "@next/env": "^14.2.13",
+    "@playwright/test": "^1.47.2",
     "@redux-devtools/extension": "^3.3.0",
-    "@testing-library/jest-dom": "^6.4.8",
-    "@testing-library/react": "^16.0.0",
-    "@types/jest": "^29.5.12",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@types/jest": "^29.5.13",
     "@types/lodash": "^4.17.7",
-    "@types/node": "^22.1.0",
-    "@types/pg": "^8.11.6",
-    "@types/react": "18.3.3",
+    "@types/node": "^22.5.5",
+    "@types/pg": "^8.11.10",
+    "@types/react": "18.3.8",
     "@types/react-dom": "18.3.0",
-    "drizzle-kit": "^0.23.2",
-    "eslint": "9.8.0",
-    "eslint-config-next": "14.2.5",
+    "drizzle-kit": "^0.24.2",
+    "eslint": "9.11.0",
+    "eslint-config-next": "14.2.13",
     "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.3.3",
-    "prettier-plugin-organize-imports": "^4.0.0",
-    "prettier-plugin-packagejson": "^2.5.1",
-    "prettier-plugin-tailwindcss": "^0.6.5",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-packagejson": "^2.5.2",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "ts-node": "^10.9.2",
-    "tsx": "^4.16.5",
-    "typescript": "5.5.4",
-    "webpack": "^5.93.0"
+    "tsx": "^4.19.1",
+    "typescript": "5.6.2",
+    "webpack": "^5.94.0"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} --transpile-only prisma/seed.ts"
